# aws-fraud-detection-sagemaker

./: .gitignore  README.md  fraud_detection_project.ipynb  lambda_function.py  locustfile.py  optimal_threshold.json  pyproject.toml  xgboost-model
